# aplang

./: .gitignore  AGREEMENT.md  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  README.md  errors.md  generate_std.md  parser_debug.ap  stmt.md  test_comment.ap
.github/workflows/: artifacts.yml  cert-test.yml  msix-test.yml  release.yml  tests.yml  version-tagging.yml
ci/: release-template.md
ci/msix-package-root/: AppxManifest.xml  resources.pri
examples.ap/: bubblesort.ap  fib.ap  fib2.ap  fizzbuzz.ap  format.ap  if.ap  input.ap  loop.ap  loopstop.ap  main.ap  map.ap  module.ap  nested.ap  robot.ap  scope.ap  string.ap
launcher/: Cargo.toml
launcher/src/: main.rs
src/: aplang.rs  aplang_error.rs  aplang_std.rs  aplang_std_turtle.rs  arguments.rs  ast.peg  ast.rs  debug.rs  errors.rs  event.rs  expr.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  output.rs  parser.rs  parser2.rs  repl.rs  run.rs  scanner.rs  source.rs  splash.rs  stmt.rs  syntax.rs  syntax_kind.rs  test.ap  token.rs  wasm.rs
src/aplang_std/: colors.rs  file_system.rs  io.rs  math.rs  mod.rs  std_macros.rs  strings.rs  style.rs  time.rs
src/interpreter/: env.rs  errors.rs  interpreter.rs  mod.rs  procedure.rs  value.rs
src/lexer/: debug.rs  lexer.rs  mod.rs  syntax_kind.rs  tests.rs  token.rs
src/parser/: ast.rs  debug.rs  mod.rs  parser.rs
src/standard_library/: file_system.rs  io.rs  map.rs  math.rs  mod.rs  robot.rs  std_macros.rs  strings.rs  style.rs  time.rs
tests/: root.rs
