[package]
name = "aplang"
version = "0.1.3"
edition = "2021"
authors = ["Patrick Unick", "Eli Fischl"]
description = "A programming language made to aid students who are taking AP Computer Science Principals."
documentation = "https://aplang.org/book/"
readme = "README.md"
homepage = "https://aplang.org/"
license = "GPL-3.0-or-later"
keywords = ["aplang", "ap", "programming", "language", "apcsp"]
categories = ["compilers"]
repository = "https://github.com/snowfoxsh/aplang"
default-run = "aplang"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mapro = "0.1.1"
miette = { version = "7.2.0", features = ["fancy"] }
owo-colors = "4.0.0"
thiserror = "1.0.63"
clap = { version = "4.5.16", features = ["derive"] }
stacker = "0.1.17"
rand = "0.9.0-alpha.2"